--- a/admin/src/app/features/payment/payment.component.html
+++ b/admin/src/app/features/payment/payment.component.html
@@ -41,7 +41,7 @@
         {{ payment.status === 'completed' ? 'Hoàn tất' : 'Lỗi/Chờ xử lý' }}
       </span>
     </div>
-    <div>{{ payment.payment_method[0].name }}</div>
+    <div>{{ payment.payment_method.name }}</div>
     <!-- <div>{{ payment.transaction_id }}</div> -->
     <div>
       <button class="icon-button" (click)="viewDetail(payment)">
@@ -60,10 +60,10 @@
       <div class="popup-section"><label>Tổng tiền:</label><span>{{ selectedPayment.amount | currency:'VND' }}</span></div>
       <div class="popup-section"><label>Ngày thanh toán:</label><span>{{ selectedPayment.payment_date | date:'dd/MM/yyyy HH:mm' }}</span></div>
       <div class="popup-section"><label>Trạng thái:</label><span>{{ selectedPayment.status }}</span></div>
-      <div class="popup-section"><label>Phương thức:</label><span>{{ selectedPayment.payment_method[0].name }}</span></div>
+      <div class="popup-section"><label>Phương thức:</label><span>{{ selectedPayment.payment_method.name }}</span></div>
       <div class="popup-section"><label>Giao dịch ID:</label><span>{{ selectedPayment.transaction_id }}</span></div>
       <div class="popup-section"><label>Ghi chú:</label><span>{{ selectedPayment.booking[0].note }}</span></div>
-      <div class="popup-section" *ngIf="selectedPayment.metadata"><label>Phản hồi:</label><span>{{ selectedPayment.metadata.message }}</span></div>
+      <div class="popup-section" *ngIf="selectedPayment.metadata"><label>Phản hồi:</label><span>{{ selectedPayment.metadata }}</span></div>
 
       <button class="close-btn" (click)="closeDetailPopup()">Đóng</button>
     </div>
