--- a/admin/src/app/features/booking/booking.component.html
+++ b/admin/src/app/features/booking/booking.component.html
@@ -34,7 +34,7 @@
         (change)="filterBookings()"
       >
         <option value="">Tất cả</option>
-        <option *ngFor="let status of bookingStatuses" [value]="status._id">
+        <option *ngFor="let status of bookingStatuses" [value]="status.id">
           {{ status.name }}
         </option>
       </select>
@@ -49,7 +49,7 @@
         (ngModelChange)="filterBookings()"
       >
         <option value="">Tất cả</option>
-        <option *ngFor="let method of bookingMethods" [value]="method._id">
+        <option *ngFor="let method of bookingMethods" [value]="method.id">
           {{ method.name }}
         </option>
       </select>
@@ -64,7 +64,7 @@
         (ngModelChange)="filterBookings()"
       >
         <option value="">Tất cả</option>
-        <option *ngFor="let status of paymentStatuses" [value]="status._id">
+        <option *ngFor="let status of paymentStatuses" [value]="status.id">
           {{ status.name }}
         </option>
       </select>
@@ -101,7 +101,7 @@
 
   <!-- Table Rows -->
   <div class="table-row" *ngFor="let booking of bookings; let i = index">
-    <div>{{ booking._id || "---" }}</div>
+    <div>{{ booking.id || "---" }}</div>
     <div>{{ booking.full_name }}</div>
     <div>
       {{ booking.check_in_date | date : "dd/MM/yyyy" }}<br />
@@ -111,8 +111,8 @@
       {{ booking.adult_count }}
       {{ booking.children_count }}
     </div> -->
-    <div>{{ booking.booking_method?.[0]?.name || 'Không rõ' }}</div>
-    <div>{{ booking.booking_status?.[0]?.name || 'Chưa xác định' }}</div>
+    <!-- <div>{{ booking.booking_method?.[0]?.name || 'Không rõ' }}</div>
+    <div>{{ booking.booking_status?.[0]?.name || 'Chưa xác định' }}</div> -->
     <div>{{ booking.payment_status || "Chưa thanh toán" }}</div>
     <div>{{ booking.total_price | currency : "VND" }}</div>
     <div class="actions">
