--- a/admin/src/app/features/websitecontent/websitecontent.component.html
+++ b/admin/src/app/features/websitecontent/websitecontent.component.html
@@ -35,7 +35,7 @@
         <div class="popup-section">
           <label for="content_type_id">Loại nội dung:</label>
           <select id="content_type_id" name="content_type_id" [(ngModel)]="newContent.content_type_id" required>
-            <option *ngFor="let type of contentTypes" [value]="type._id">{{ type.name }}</option>
+            <option *ngFor="let type of contentTypes" [value]="type.id">{{ type.name }}</option>
           </select>
         </div>
 
@@ -83,7 +83,7 @@
 
       <div class="popup-section">
         <label>Ngày cập nhật:</label>
-        <span>{{ selectedContent.updatedAt | date:'dd/MM/yyyy' }}</span>
+        <span>{{ selectedContent.updated_at | date:'dd/MM/yyyy' }}</span>
       </div>
 
       <div class="popup-section" *ngIf="selectedContent.image">
@@ -133,7 +133,7 @@
         <div class="popup-section">
           <label for="edit-content_type_id">Loại nội dung:</label>
           <select id="edit-content_type_id" name="content_type_id" [(ngModel)]="editContent.content_type_id" required>
-            <option *ngFor="let type of contentTypes" [value]="type._id">{{ type.name }}</option>
+            <option *ngFor="let type of contentTypes" [value]="type.id">{{ type.name }}</option>
           </select>
         </div>
 
