Refactor room class feature and update related logic
Removed room-class-list component and replaced it with room-class component. Updated routing, services, and main-room-class logic to use the new room-class feature. Improved filtering, searching, and popup handling in main-room-class. Adjusted authentication and API handling for better consistency. Added new image assets to backend.

--- a/admin/src/app/features/main-room-class/main-room-class.component.html
+++ b/admin/src/app/features/main-room-class/main-room-class.component.html
@@ -36,7 +36,7 @@
         id="status"
         [(ngModel)]="statusFilterString"
         name="statusFilterString"
-        (change)="onStatusChange()"
+        (ngModelChange)="onStatusChange()"
       >
         <option value="">Tất cả</option>
         <option value="true">Đang hoạt động</option>
@@ -138,9 +138,14 @@
     <div>Hành động</div>
   </div>
 
-  <div *ngFor="let rtm of mainRoomClasses; let i = index" class="table-row">
+  <div
+    style="cursor: pointer"
+    (click)="onViewDetail($event, rtm)"
+    *ngFor="let rtm of mainRoomClasses; let i = index"
+    class="table-row"
+  >
     <div>{{ i + 1 }}</div>
-    <div style="cursor: pointer" (click)="onViewDetail(rtm)">
+    <div>
       {{ rtm.name }}
     </div>
     <!-- <div>{{ rtm.description }}</div> -->
@@ -223,7 +228,7 @@
         </div>
       </div>
 
-      <button class="close-btn" (click)="closeDetailPopup()">Đóng</button>
+      <button class="close-btn" (click)="onClosePopup()">Đóng</button>
     </div>
   </div>
   <!-- Popup Sửa loại phòng chính -->
