--- a/admin/src/app/shared/components/header/header.component.html
+++ b/admin/src/app/shared/components/header/header.component.html
@@ -10,6 +10,7 @@
         <img
           src="assets/img/image.png"
           alt="navbar brand"
+          loading="lazy"
           class="navbar-brand"
           height="50"
         />
